--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Organizacion para contenidos de estudios por topicos.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [
     "facultad",
